@@ -1,0 +1,56 @@
+/*
+ *   Copyright (C) 2008-2009 by Patryk Połomski
+ *   cykuss@gmail.com
+ *
+ *   This program is free software; you can redistribute it and/or modify
+ *   it under the terms of the GNU General Public License as published by
+ *   the Free Software Foundation; either version 2 of the License, or
+ *   (at your option) any later version.
+ *
+ *   This program is distributed in the hope that it will be useful,
+ *   but WITHOUT ANY WARRANTY; without even the implied warranty of
+ *   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ *   GNU General Public License for more details.
+ *
+ *   You should have received a copy of the GNU General Public License
+ *   along with this program; if not, write to the
+ *   Free Software Foundation, Inc.,
+ *   59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
+ */
+#include "threadlogs.h"
+
+
+threadLogs::threadLogs()
+{
+    Zmienne().logs = "";
+}
+void threadLogs::run()
+{
+    while(1){
+        this->sleep(1);
+        if(Zmienne().logs != ""){
+            Q_EMIT append(Zmienne().logs);
+            Zmienne().logs = "";
+        }
+    }
+}
+void threadLogs::setLogLevel(int llevel)
+{
+    unsigned int logLevel(llevel);
+    logLevel = static_cast<unsigned int>( Log::Error ) - logLevel + 1;
+    LogGuiHandle *logh = new LogGuiHandle(static_cast<Log::Level>( logLevel ) );
+    Log::getLog()->addHandle(logh);
+}
+threadLogs::LogGuiHandle::LogGuiHandle( Log::Level lvl): LogHandle(lvl)
+{
+}
+threadLogs::LogGuiHandle::~LogGuiHandle()
+{
+}
+void threadLogs::LogGuiHandle::log(const char *msg)
+{
+    QTime time = QTime::currentTime();
+    Zmienne().logs += "<font color=\"red\"><b>" + time.toString("hh:mm:ss") + "</b></font> - "
+                      + QString::fromUtf8(msg) + "<br/>";
+
+}
